[project]
name = "kronicle"
version = "0.0.1"
authors = [{ name = "Lying Dalai", email = "lying.dalai@gmail.com" }]
maintainers = [{ name = "Lying Dalai", email = "lying.dalai@gmail.com" }]
description = "FastAPI-powered TimescaleDB microservice for storing time-series measurements"
readme = "README.md"
requires-python = ">=3.11"
license-files = ["LICENCE.md"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["nullband", "butt"]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Repository = "https://github.com/LyingDalai/nullband-butt-script.git"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

# ----- Tool: black
[tool.black]
line-length = 120
target-version = ['py312']

# ----- Tool: commitizen
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = ["pyproject.toml:project.version"]

# ----- Tool: pytest
[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require a running server",
]
pythonpath = ["src"]
norecursedirs = ["*.egg", ".eggs", "dist", "build", "wip"]
filterwarnings = ["ignore:.*pkg_resources.*:DeprecationWarning"]
addopts = [
    "--cov=kronicle",
    "--cov-report=term-missing",
    "--cov-report=html:reports/html_dir",
    "--cov-report=xml:reports/coverage.xml",
]
# ----- Tool: setuptools
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

# ----- Tool: pyright
[tool.pyright]
exclude = ["**/__pycache__", "**/.env"]
executionEnvironments = [{ root = ".", extraPaths = ["src"] }]
extraPaths = ["src"]
include = ["src", "tests"]
pythonVersion = "3.12"
reportArgumentType = "warning"
reportDuplicateImport = true
reportImportCycles = true
reportIncompatibleMethodOverride = "warning"
reportMissingImports = true
reportUnusedImport = true
venv = ".venv"
venvPath = "."
verboseOutput = true

# ----- Tool: Ruff
[tool.ruff]
# match Black
line-length = 120
# auto-fix issues (imports, unused vars)
fix = true
# common codes: E/F=flake8, I=imports, B=bugs, C=complexity
# line length handled by Black
exclude = ["**/.venv", "**/__pycache__", "**/.env"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C"]
ignore = ["E501"]
